integrate subscription payment with stripe

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@trpc/react-query": "^10.40.0",
     "@trpc/server": "^10.40.0",
     "@uploadthing/react": "^6.0.2",
+    "add": "^2.0.6",
     "ai": "^2.2.31",
+    "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.6",
@@ -45,7 +47,9 @@
     "react-pdf": "^7.6.0",
     "react-resize-detector": "^9.1.1",
     "react-textarea-autosize": "^8.5.3",
+    "shadcn-ui": "^0.6.0",
     "simplebar-react": "^3.2.4",
+    "stripe": "^14.10.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.1.0",
