--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "13.5.5",
     "openai": "^4.24.1",
     "pdf-parse": "^1.1.1",
+    "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
